cargando los datos en redshift

--- a/extract_covid_data.ipynb
+++ b/extract_covid_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,11 @@
     "\n",
     "import requests\n",
     "import pandas as pd\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "from sqlalchemy import create_engine\n",
+    "import psycopg2\n",
+    "import os\n",
+    "from dotenv import load_dotenv"
    ]
   },
   {
@@ -27,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -477,6 +481,51 @@
    ],
    "source": [
     "display(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "\n",
+    "host=os.getenv('HOST')\n",
+    "port=os.getenv('PORT')\n",
+    "database=os.getenv('DATABASE')\n",
+    "redshift_user=os.getenv('REDSHIFT_USER')\n",
+    "password=os.getenv('PASSWORD')\n",
+    "schema=os.getenv('SCHEMA')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine= create_engine(f\"postgresql+psycopg2://{redshift_user}:{password}@{host}:{port}/{database}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "414"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_sql('covid_data',engine,if_exists='replace',index=False,schema=schema)"
    ]
   }
  ],
